v3.5.0 - Feb 17, 2016
- Added PHP 7.0 support for UBUNTU(Trusty)

v3.4.1 - Jan 20, 2016
- Fixed and update ee stack install --nginx/--nginxmainline
- Fixed --letsencrypt minor issues
- Fixed #665 #659
- Fixed other minor bug

v3.4.0 - Jan 6, 2016
- Added Let's Encrypt support
   - ee site create example.com [--wp/..] --letsencrypt
   - ee site update example.com --letsencrypt=on/off/renew
   - Automatic renew of certs through cron
   - Mail notification added on certs renew
   - Alias command: --le
- Added HTTP/2 support
   - ee stack install/remove/purge --nginxmainline
- Check SSL cert status/expiry date in site info
   - ee site info example.com
- Update autocompletion and man page

v3.3.15 - Dec 9, 2015
- Upgrade wp-cli version to 0.21.1

v 3.3.14 - Nov 10, 2015
- Fix EasyEngine installation issue

v 3.3.13 - Nov 10, 2015
- Security Fix in redis.conf
- Update wp-cli version

v 3.3.12 - Nov 3, 2015
- Fix #637
- Updated wp-cli version

v 3.3.11 - Oct 26, 2015
- Updated MySql version
- Added new repository for MySql
- Minor fix for redis cache in debian jessie
- Security Fix in location.conf

v 3.3.10 - Oct 19, 2015
- Fix #630
- Fix #631
- Updated wp-cli version

v 3.3.9 - Oct 9, 2015
- Fix #625
- Fix #627
- Fix phpmyadmin for remote mysql server

v 3.3.8 - Sep 9, 2015
- # Fix White screen for NGINX PLUS users

v 3.3.7 - Sep 9, 2015
- EasyEngine + NGINX PLUS (http://docs.rtcamp.com/easyengine/nginx-plus/)

v 3.3.6 - Sep 4, 2015
- Fix #611

v 3.3.5 - Sep 2, 2015
- Introduced new support of --force/-f in delete command of site
  - Removes database entry or nginx configuration of site from system
  - ee site delete example.com --force/-f
  - ee site delete example.com --force/-f --db/--files
- Moved ~/.my.cnf to /etc/mysql/conf.d/my.cnf
  - Fixed MySQL credential issue
- Fixed Bug in cache clean --all command
- Improved 404 handling for static HTML sites #561
- Improved cleanup action while site create command fail
- Updated wpfc config #543