@@ -1,5 +1,8 @@
 v3.5.0 - Feb 17, 2016
-- Added PHP 7.0 support for UBUNTU(Trusty)
+- Added PHP 7.0 support for Ubuntu(Trusty)
+- Dual support for PHP 5.6 + PHP 7.0
+- Removed old repository for PHP
+- Fixed minor issues
 
 v3.4.1 - Jan 20, 2016
 - Fixed and update ee stack install --nginx/--nginxmainline
